--- a/keel-sample/pom.xml
+++ b/keel-sample/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.xiaohongshu.fls.crm</groupId>
+        <groupId>io.philo.framework</groupId>
         <artifactId>keel</artifactId>
         <version>${revision}</version>
     </parent>
@@ -13,7 +13,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.xiaohongshu.fls.crm</groupId>
+            <groupId>io.philo.framework</groupId>
             <artifactId>keel-spring-boot-starter</artifactId>
             <version>${project.version}</version>
         </dependency>
