--- a/keel-spring-boot-starter/pom.xml
+++ b/keel-spring-boot-starter/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.xiaohongshu.fls.crm</groupId>
+        <groupId>io.philo.framework</groupId>
         <artifactId>keel</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>keel-spring-boot-starter</artifactId>
@@ -23,7 +23,7 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.xiaohongshu.fls.crm</groupId>
+            <groupId>io.philo.framework</groupId>
             <artifactId>keel-core</artifactId>
             <version>${project.version}</version>
         </dependency>
